<resources>
    <string name="app_name">ShowMeTheMoney</string>
    <string name="action_settings">Clear History</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name_spaces">Show Me The Money</string>
    <string name="transaction_title">Title</string>
    <string name="amount">Amount</string>
    <string name="title">Show Me The Money</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add_payment">Schedule Payment</string>
    <string name="pick_date">Pick a date</string>
    <string name="food_budget">Food Budget</string>
    <string name="entertainment_budget">Entertainment Budget</string>
    <string name="living_budget">Living Cost Budget</string>
    <string name="other_budget">Other Expenses Budget</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter">Enter</string>
    <string name="enter_name">Enter your name</string>
    <string name="welcome">Welcome to Show Me The Money</string>

</resources>
