<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryGreen"
                android:focusableInTouchMode="false"
                android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:gravity="center"
        android:hint="@string/enter_name"
        android:layout_marginTop="30dp"
        app:met_textColorHint="@color/white"
        android:textColor="@color/white"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"
        />

    <LinearLayout
        android:id="@+id/welcome_text_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_edit_text"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/welcome_to_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="35sp"/>


        <TextView
            android:id="@+id/show_me_the_money_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="35sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/welcome_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:text="@string/enter"
        android:textColor="@color/primaryGreen"
        />

</RelativeLayout>